--- a/app/template/index.html
+++ b/app/template/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lambda Calculus Interpreter</title>
+    <title>PLambda Interpreter</title>
     <style>
         * {
             box-sizing: border-box;
@@ -81,7 +81,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Lambda Calculus Interpreter</h1>
+        <h1>PLambda Interpreter</h1>
         <div class="input-group">
             <label for="lambda-expression">Lambda Expression:</label>
             <input type="text" id="lambda-expression" class="input-field">
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <script>
+    <!--<script>
         document.getElementById('compileForm').addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent default form submission
             var code = document.getElementById('codeInput').value; // Get code from textarea
@@ -135,6 +135,6 @@
             };
             xhr.send('code=' + encodeURIComponent(code)); // Send code in the request body
         }
-    </script>
+    </script>-->
 </body>
 </html>
