\\made chnages to html

--- a/app/template/index.html
+++ b/app/template/index.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <!--<script>
+    <script>
         document.getElementById('compileForm').addEventListener('submit', function(event) {
             event.preventDefault(); // Prevent default form submission
             var code = document.getElementById('codeInput').value; // Get code from textarea
@@ -135,6 +135,6 @@
             };
             xhr.send('code=' + encodeURIComponent(code)); // Send code in the request body
         }
-    </script>-->
+    </script>
 </body>
 </html>
